add search panel

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,8 @@
     <link rel="stylesheet" text="text/css" href="/style/searchbar.css">
     <link rel="stylesheet" text="text/css" href="/style/listing.css">
     <link rel="stylesheet" text="text/css" href="/style/footer.css">
+    <link rel="stylesheet" text="text/css" href="/style/search.css">
+    <link rel="stylesheet" text="text/css" href="/style/displayProperty.css">
 
 
   
