--- a/public/style/footer.css
+++ b/public/style/footer.css
@@ -5,7 +5,8 @@
     /* position: fixed; */
     /* bottom: 0; */
     /* margin-bottom: 20px; */
-    padding: 50px;
+    padding: 10px;
+    /* margin-top: 20px; */
     background-color: lightblue
 }
 
