--- a/views/body.ejs
+++ b/views/body.ejs
@@ -19,6 +19,7 @@
     <div class="mySlides fade">
     <img src="/media/apartment5.jpg" style="width:100%;  height: 400px;">
     </div>
+    <% include ./partials/search %>
     <% include ./partials/searchbar %>
 </div>
 
@@ -29,5 +30,6 @@
   <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
+
 
 <% include ./partials/listing %>
