--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,13 +3,11 @@
 <div class="navbar">
 
     <div id="logo">
-        <img src="/media/logo.png" alt="kanso">
+        <a href="/"><img src="/media/logo.png" alt="kanso"></a>
     </div>
 
     <ul>
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Register</a></li> <!-- /page will direct back to the route file -->
     </ul>
-    
-
 </div>
