--- a/public/style/footer.css
+++ b/public/style/footer.css
@@ -1,13 +1,16 @@
 .footer{
+    position: relative;
     /* border: 2px solid red; */
     text-align: center;
     width: 100%;
     /* position: fixed; */
     /* bottom: 0; */
+    top: 100px;
     /* margin-bottom: 20px; */
     padding: 10px;
     /* margin-top: 20px; */
     background-color: lightblue
+    
 }
 
 .kan{
