--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,7 @@
     <link rel="stylesheet" text="text/css" href="/style/footer.css">
     <link rel="stylesheet" text="text/css" href="/style/search.css">
     <link rel="stylesheet" text="text/css" href="/style/displayProperty.css">
+    <link rel="stylesheet" text="text/css" href="/style/login.css">
     <link rel="stylesheet" text="text/css" href="/style/register.css">
 
 
