--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,11 +3,11 @@
 <div class="navbar">
 
     <div id="logo">
-        <a href="/"><img src="/media/logo.png" alt="kanso"></a>
+        <a href="/" onClick="changeBackground(false)"><img src="/media/logo.png" alt="kanso"></a>
     </div>
 
     <ul>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li> <!-- /page will direct back to the route file -->
+        <li><a href="/login" onClick="changeBackground(true)">Login</a></li>
+        <li><a href="/register" onClick="changeBackground(true)">Register</a></li> <!-- /page will direct back to the route file -->
     </ul>
 </div>
