--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -1,12 +1,17 @@
+
+body{
+    background-color: url("../media/apartment5.jpg");
+    margin: 0;
+    /* background-size: cover; */
+  }
+
+  
 *{
     box-sizing : border-box;
     font-family: serif;
 }
 
-body{
-    background-color: url("../media/apartment5.jpg");
-    margin: 0;
-}
+
 
 
 
