--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,6 +5,7 @@
 <h4>Kanso Appartment Renting Company </h4>
 </footer>
 <script src="/script/script.js"></script> 
+<script src="/script/event.js"></script> 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
