working on the property detail page, not complete

--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: url("../media/apartment5.jpg");
+    /* background-color: url("../media/apartment5.jpg"); */
     margin: 0;
     /* background-size: cover; */
   }
