--- a/public/style/register.css
+++ b/public/style/register.css
@@ -1,5 +1,5 @@
 body {
-     background: url('../media/apartment5.jpg') fixed;
+     /* background: url('../media/apartment5.jpg') fixed; */
     background-size: cover;
 }
 
