--- a/public/style/slideshow.css
+++ b/public/style/slideshow.css
@@ -1,11 +1,26 @@
 * {box-sizing: border-box;}
 /* body {font-family: Verdana, sans-serif;} */
-.mySlides {
+.mySlides, .myImageSlides {
     display: none;
-    
-    
+    border: 5px solid green;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    /* padding-top: 0px; */
 }
-img {vertical-align: middle;}
+
+
+img {
+  /* vertical-align: middle; */
+  display: block;
+  margin: auto;
+  
+}
+
+.slideshow{
+  max-width: 70%;
+}
+
 
 /* Slideshow container */
 .slideshow-container {
@@ -14,7 +29,7 @@ img {vertical-align: middle;}
   margin-top: 0;
   padding-top: 0;
   /* margin: -10px; */
-  top: 0px;   
+  /* top: 0px;    */
   /* border: 2px solid green; */
 }
 
@@ -30,16 +45,7 @@ img {vertical-align: middle;}
 }
 
 
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color .4s ease;
-}
+
 
 .active {
   background-color: #717171;
@@ -66,4 +72,52 @@ img {vertical-align: middle;}
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
+}
+
+/* ----------- */
+
+
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: #717171;
+  opacity: .5;
+  /* border: 5px solid red; */
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.showall{
+  width: 100%;
+  margin: auto;
+}
+
+.show {
+  /* z-index: -1; */
+  padding-top: 0px;
+  margin-top: 0px;
+  
+  /* border: 2px solid green; */
+  position: relative;
 }
