--- a/views/view.ejs
+++ b/views/view.ejs
@@ -4,32 +4,37 @@
         <%- include("partials/viewPropertyImage", {listing: listing}); %>
     </div>
 
-        
-        <% if (typeof listing !== "undefined"){ %>
-
-    
-                
+    <% if (typeof listing !== "undefined"){ %>                
         <% listing.forEach((value) => { %>
-        <div class="propertyDetail">
-        
-                <div class="info">
-                    <h3 class="address"><%= value.addr %></h3>
-                    <p class="room"><%= value.numRooms %> Bedroom <%= value.numBath %> Bathroom <%= value.parking %> Parking</p> 
-                    <p class="style">Price:<%= value.price %></p> 
-                    <p class="style">Type: <%= value.listing_type %></p>
-                    <p class="style">Description: <%= value.listing_desc.substring(0, 20) %>...</p>
-                    <p class="style">Posted on: <%= value.posted_date %></p>
-                    <p class="style">By: <%= value.username %></p>
-                    <a href="mailto:<%= value.email %>" style="margin-left: 20px" class="btn btn-default">Contact Owner</a>
-                    <a href="listings/<%= value.listing_id %>"" style="margin-left: 80px" class="btn btn-default">View More</a>
+            <div class="clearfix">
+            <!--
+                <% postedDate = new Date(value.posted_date) %>
+                <% pd = new Date(postedDate.getFullYear(), postedDate.getMonth(), postedDate.getDate())%>
+                <% timeDiff = Math.abs(new Date().getTime() - postedDate.getTime()) %>
+                <% diffDays = Math.ceil(timeDiff / (1000 * 3600 *24)) %>
+            -->
+            <%= value.posted_time %>
+            
+                <div class="divider">
+                    <div class="infoDetail">
+                        <h3 class="address"><%= value.addr %></h3>
+                        <p class="room"><%= value.numRooms %> Bedroom <%= value.numBath %> Bathroom <%= value.parking %> Parking</p> 
+                        <p class="style">Price:<%= value.price %></p> 
+                        <p class="style">Type: <%= value.listing_type %></p>
+                        <p class="style">Description: <%= value.listing_desc %></p>
+                        <p class="style">Posted on: <%= value.posted_date %></p>
+                        <p class="style">By: <%= value.username %></p>
+                        <a href="mailto:<%= value.email %>" style="margin-left: 20px" class="btn btn-default">Contact Owner</a>
+                    </div>
                 </div>
 
-              
-                
-            <% }) %>
-                
-        <% } %>
-        
-            <hr>
+                <div class="divider">
+                    <div id="map">map</div>
+                    <input type="hidden" value= "<%= value.lat %>" id="lat" name="lat">
+                    <input type="hidden" value= "<%= value.lng %>" id="lng" name="lng">
+                </div>
+            </div>
+        <% }) %>
+    <% } %>
 </div>
 <% include ./partials/footer %>
