--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" text="text/css" href="/style/displayProperty.css">
     <link rel="stylesheet" text="text/css" href="/style/login.css">
     <link rel="stylesheet" text="text/css" href="/style/register.css">
+    <link rel="stylesheet" text="text/css" href="/style/propertyDetail.css">
 
 
   
