adding posting to index page

--- a/public/style/footer.css
+++ b/public/style/footer.css
@@ -9,7 +9,7 @@
     /* margin-bottom: 20px; */
     padding: 10px;
     /* margin-top: 20px; */
-    background-color: lightblue
+    background-color: rgb(87, 128, 194);
     
 }
 
