--- a/public/style/propertyDetail.css
+++ b/public/style/propertyDetail.css
@@ -24,7 +24,7 @@
 
     border: 5px solid purple;
     display: inline-block;
-    width: 450px;
+    width: 500px;
     top: 0px;
     height: 250px;
 }
@@ -34,4 +34,5 @@
     float: left;
     width: 50%;
     border: 5px dashed goldenrod;
+    top: 0px;
 }
