finish view more page but may need more styling. working on validation

--- a/public/style/displayProperty.css
+++ b/public/style/displayProperty.css
@@ -23,7 +23,7 @@
 }
 
 .myList::after{
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     /* width: 400px; */
     display: block;
     height: 300px;
