--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,7 +55,7 @@
             </div>
             <!-- Register Button -->
             <div class="form-group">
-                <button type="submit" class="registerbtn">Register</button>
+                <button type="submit" class="registerbtn btn btn-primary">Register</button>
             </div>
 
             <p>Already have an account? <a href="#">Sign in</a>.</p>
