--- a/public/style/slideshow.css
+++ b/public/style/slideshow.css
@@ -2,7 +2,7 @@
 /* body {font-family: Verdana, sans-serif;} */
 .mySlides, .myImageSlides {
     display: none;
-    border: 5px solid green;
+    /* border: 5px solid green; */
     width: 100%;
     padding: 0;
     margin: 0;
