--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                   <div class="container" >
-                  <button type="submit" onclick="document.getElementById('id01').style.display='none'" class="loginbtn">Login</button>
+                  <button type="submit" onclick="document.getElementById('id01').style.display='none'" class="loginbtn btn btn-primary">Login</button>
                   </div>
             </div>
          </div>
