working on geocoding api, converting address to lgt and lng

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -44,8 +44,12 @@
 
 
 
+<!-- google map api -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-5_OdhaaQpFAUXkA61NhqGFPqmBYJvrE&callback=myMap"></script>
+-->
+<!-- google geocoding api -->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRLqAKm4laxnNI2PvLS9xEIadf7pOelNM&callback=getLatLng&callback=myMap"></script> 
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-5_OdhaaQpFAUXkA61NhqGFPqmBYJvrE&callback=myMap"></script>
 
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
