--- a/views/partials/searchbar.ejs
+++ b/views/partials/searchbar.ejs
@@ -3,7 +3,7 @@
     <!--Change and keep background color on click 'google'-->
         <ul>
             <li><a>rent</a></li>
-            <li><a>post a property</a></li>
+            <li><a href="posting">post a property</a></li>
         </ul>
 
         <div class="property">
