--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,13 +14,13 @@
             <div class="form-group">
                   <label for="email" class="col-sm-3 control-label">Email</label>
                   <div class="col-sm-9">
-                  <input type="email" id="email" placeholder="Email" class="form-control" name= "email" required>
+                  <input type="email" id="email" name="email" placeholder="Email" class="form-control" name= "email" required>
                   </div>
             </div>
             <div class="form-group">
                   <label for="password" class="col-sm-3 control-label">Password</label>
                   <div class="col-sm-9">
-                  <input type="password" id="password" placeholder="Password" class="form-control" required>
+                  <input type="password" id="password" name="password" placeholder="Password" class="form-control" required>
                   </div>
             </div>
             <div class="form-group">
