--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,19 +1,19 @@
 <% include ./partials/header %>
 
 
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal" role="form" action="" method="POST">
          <h3>Registration</h3>
             <div class="form-group">
                 <label for="firstName" class="col-sm-3 control-label">First Name</label>
                 <div class="col-sm-9">
-                    <input type="text" id="firstName" placeholder="First Name" class="form-control" autofocus required>
+                    <input type="text" id="firstName" name="firstName" placeholder="First Name" class="form-control" autofocus required>
                 </div> 
             </div>
 
             <div class="form-group">
                 <label for="lastName" class="col-sm-3 control-label">Last Name</label>
                 <div class="col-sm-9">
-                    <input type="text" id="lastName" placeholder="Last Name" class="form-control" autofocus required>
+                    <input type="text" id="lastName" name="lastName" placeholder="Last Name" class="form-control" autofocus required>
                 </div>
             </div>
 
@@ -27,14 +27,14 @@
             <div class="form-group">
                 <label for="password" class="col-sm-3 control-label">Password</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Password" class="form-control" required>
+                    <input type="password" id="password" name="password" placeholder="Password" class="form-control" required>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="password" class="col-sm-3 control-label">Confirm Password</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Password" class="form-control" required>
+                    <input type="password" id="password2" name="password2" placeholder="Password" class="form-control" required>
                 </div>
             </div>
             <!-- Select state -->
