--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
       <!-- <h1>Kanso</h1> -->
       <!-- <div class="container"> -->
-      <form class="form-horizontal" role="form" style="margin-top: 50px; padding-right: 30px;">
+      <form class="form-horizontal" role="form" style="margin-top: 50px; padding-right: 30px;" method="POST" action="">
          <h3 style="margin-left: 35px;"> Login </h3>
          <div class="form-group">
          </div>
